# market-pulse

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
docs/: performance.md
include/market_pulse/: platform.hpp  ring_buffer.hpp  simulation.hpp  spsc_ring.hpp
scripts/: compare_benchmarks.py
src/: main.cpp  platform.cpp  simulation.cpp
tests/: test_main.cpp
